<resources>
    <string name="app_name">CoverApp</string>
    <string name="baseUrl">http://api.coverappke.com</string>
    <string name="site_url">http://api.coverappke.com</string>
    <string name="progress_login">Logging in…</string>
    <string name="title_assets">Assets</string>
    <string name="title_profile">Profile</string>
    <string name="title_claims">Claims</string>
    <string name="title_products">Our Products</string>
    <string name="fragment_products">Our Products</string>
    <string name="title_settings">Settings</string>
    <string-array name="period_options">
        <item>Select Payment Plan</item>
        <item>Monthly</item>
        
        
        <item>Annually</item>
    </string-array>
    <string-array name="partner_options">
        <item>Select Partner</item>
        <item>Partner 1</item>
        <item>Partner 2</item>
        <item>Partner 3</item>
        <item>Partner 4</item>
    </string-array>
    <string-array name="what_is_covered">
        <item>Select cause of damage</item>
        <item>Theft</item>
        <item>Accidental &amp; malicious damage</item>
        <item>Fire (Smoke &amp; flames)</item>
        <item>Flood &amp; water damage</item>
        <item>Natural disasters</item>
        <item>Riot &amp; strike</item>
    </string-array>
    <string-array name="gender">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="asset_options">
        <item>Select Asset</item>
        <item>Samsung Galaxy S8</item>
        <item>LG Smart TV 64 inch</item>
        <item>PS4 4K</item>
    </string-array>
    <string-array name="asset_categories">
        <item>Select Asset Category</item>
        <item>Electronics</item>
        <item>Furniture</item>
        <item>Appliances</item>
    </string-array>
    <string-array name="asset_types">
        <item>Select Asset Type</item>
        <item>Phone</item>
        <item>Tablet</item>
        <item>Laptop</item>
        <item>TV</item>
    </string-array>
    <string-array name="asset_list">
        <item>Samsung TV 62</item>
        <item>LG Dishwasher</item>
        <item>Brown leather sofaset</item>
    </string-array>
    <string-array name="payment_period">
        <item></item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>BiAnnually</item>
        <item>Annually</item>
    </string-array>
    <string-array name="parent_relationship">
        <item></item>
        <item>Mother</item>
        <item>Father</item>
        <item>Mother-In-Law</item>
        <item>Father-In_Law</item>
    </string-array>
    <string-array name="commercial_or_private">
        <item></item>
        <item>Commercial</item>
        <item>Private</item>
    </string-array>
    <string-array name="reason_for_travel">
        <item></item>
        <item>Medical</item>
        <item>Study</item>
        <item>Leisure</item>
        <item>Business</item>
    </string-array>
    <string-array name="travel_pricing">
        <item></item>
        <item>Standard Rates</item>
        <item>Annual Multi-trip</item>
    </string-array>
    <string-array name="travel_pricing2">
        <item>Student Rates</item>
    </string-array>
    <string-array name="covertypes">
        <item></item>
        <item>Silver</item>
        <item>Gold</item>
        <item>Platinum</item>
    </string-array>
    <string-array name="travel_plan">
        <item></item>
        <item>EUROPE</item>
        <item>BASIC</item>
        <item>COMFORT</item>
        <item>ELITE</item>
        <item>PLATINUM</item>
    </string-array>
    <string name="airtel_menu_1">1. Go to the Airtel Money menu on your phone</string>
    <string name="airtel_menu_2">2. Select To Make Payments</string>
    <string name="airtel_menu_3">3. Select Pay Bill</string>
    <string name="airtel_menu_4">4. Select Others</string>
    <string name="airtel_menu_5">5. Enter 510800 as the business number</string>
    <string name="airtel_menu_6">6. Enter the amount you wish to top up your account with</string>
    <string name="airtel_menu_7">7. Enter your PIN</string>
    <string name="airtel_menu_8">8. Enter the generated transaction code as the reference number and send the money</string>
    <string name="airtel_menu_9">9. You will receive a confirmation text from Airtel</string>
    <string name="customize_your_own_user_experience_own_your_app">Customize your own user experience, own your app</string>
    <string name="skip_getting_started_introduction">Skip getting started introduction</string>
    <string name="skip_login_screen">Skip login screen</string>
</resources>