<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ke.co.coverapp.coverapp.activities.LoginActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:scrollbarSize="0dp"
        android:background="@drawable/rectangle_stroke"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/white"
            android:animateLayoutChanges="true"
            android:orientation="vertical">


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/airtelCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="10dp"
                android:padding="20dp"
                android:visibility="gone"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="30dp"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F44336"
                        android:padding="10dp"
                        android:src="@drawable/airtel_money" />

                    <TextView
                        android:id="@+id/airtel_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/titillium_web"
                        android:text="@string/airtel_menu_1"
                        android:textColor="@color/colorPrimaryText" />

                    <TextView
                        android:id="@+id/airtel_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/titillium_web"
                        android:text="@string/airtel_menu_2"
                        android:textColor="@color/colorPrimaryText" />

                    <TextView
                        android:id="@+id/airtel_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/titillium_web"
                        android:text="@string/airtel_menu_3"
                        android:textColor="@color/colorPrimaryText" />

                    <TextView
                        android:id="@+id/airtel_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/titillium_web"
                        android:text="@string/airtel_menu_4"
                        android:textColor="@color/colorPrimaryText" />

                    <TextView
                        android:id="@+id/airtel_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/titillium_web"
                        android:text="@string/airtel_menu_5"
                        android:textColor="@color/colorPrimaryText" />

                    <TextView
                        android:id="@+id/airtel_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/titillium_web"
                        android:text="@string/airtel_menu_6"
                        android:textColor="@color/colorPrimaryText" />

                    <TextView
                        android:id="@+id/airtel_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/titillium_web"
                        android:text="@string/airtel_menu_7"
                        android:textColor="@color/colorPrimaryText" />

                    <TextView
                        android:id="@+id/airtel_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/titillium_web"
                        android:text="@string/airtel_menu_8"
                        android:textColor="@color/colorPrimaryText" />

                    <TextView
                        android:id="@+id/airtel_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/titillium_web"
                        android:text="@string/airtel_menu_9"
                        android:textColor="@color/colorPrimaryText" />

                    <Button
                        android:id="@+id/airtelGetTID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/inner_bg"
                        android:fontFamily="@font/titillium_web"
                        android:paddingTop="10dp"
                        android:text="Get Top-up Code"
                        android:textAllCaps="false" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/mpesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#388E3C"
                    android:padding="10dp"
                    android:src="@drawable/mpesa_main" />


                <ImageButton
                    android:id="@+id/airtel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mpesa"
                    android:layout_margin="5dp"
                    android:background="#F44336"
                    android:clickable="true"
                    android:onClick="openAirtel"
                    android:padding="10dp"
                    android:src="@drawable/airtel_money" />

                <Button
                    android:id="@+id/buttonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/custom_bg"
                    android:padding="5dp"
                    android:text="Back"
                    android:textColor="#fff" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>